More to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 env.txt
 .env
+/characters.bz
+/.idea/P4ND0-bot.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
