--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 env.txt
 .env
-/characters.bz
-/.idea/P4ND0-bot.iml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/vcs.xml
+characters.bz
+.idea/
+gemini_workspace/
+Pipfile*
