--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,36 @@
-discord.py
-requests
-feedparser
-markdownify
-python-dotenv
-google-auth-httplib2
-google-auth-oauthlib
-mysql-connector-python
+-i https://pypi.org/simple
+aiohappyeyeballs==2.6.1; python_version >= '3.9'
+aiohttp==3.12.14; python_version >= '3.9'
+aiosignal==1.4.0; python_version >= '3.9'
+attrs==25.3.0; python_version >= '3.8'
+audioop-lts==0.2.1; python_version >= '3.13'
+beautifulsoup4==4.13.4; python_full_version >= '3.7.0'
+cachetools==5.5.2; python_version >= '3.7'
+certifi==2025.7.14; python_version >= '3.7'
+charset-normalizer==3.4.2; python_version >= '3.7'
+discord.py==2.5.2; python_version >= '3.8'
+feedparser==6.0.11; python_version >= '3.6'
+frozenlist==1.7.0; python_version >= '3.9'
+google-auth==2.40.3; python_version >= '3.7'
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2; python_version >= '3.6'
+httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+idna==3.10; python_version >= '3.6'
+markdownify==1.1.0
+multidict==6.6.3; python_version >= '3.9'
+mysql-connector-python==9.3.0; python_version >= '3.9'
+oauthlib==3.3.1; python_version >= '3.8'
+propcache==0.3.2; python_version >= '3.9'
+pyasn1==0.6.1; python_version >= '3.8'
+pyasn1-modules==0.4.2; python_version >= '3.8'
+pyparsing==3.2.3; python_version >= '3.9'
+python-dotenv==1.1.1; python_version >= '3.9'
+requests==2.32.4; python_version >= '3.8'
+requests-oauthlib==2.0.0; python_version >= '3.4'
+rsa==4.9.1; python_version >= '3.6' and python_version < '4'
+sgmllib3k==1.0.0
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+soupsieve==2.7; python_version >= '3.8'
+typing-extensions==4.14.1; python_version >= '3.9'
+urllib3==2.5.0; python_version >= '3.9'
+yarl==1.20.1; python_version >= '3.9'
