--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ cachetools==5.5.2; python_version >= '3.7'
 certifi==2025.7.14; python_version >= '3.7'
 charset-normalizer==3.4.2; python_version >= '3.7'
 discord.py==2.5.2; python_version >= '3.8'
+dotenv==0.9.9
 feedparser==6.0.11; python_version >= '3.6'
 frozenlist==1.7.0; python_version >= '3.9'
 google-auth==2.40.3; python_version >= '3.7'
